Update Ui and testing